fix address overflow

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -152,6 +152,14 @@
               align-items: center;
               font-size: 1rem;
               margin-bottom: 0.5rem;
+
+              &:nth-of-type(1) {
+                gap: 0.4rem;
+              }
+
+              &:nth-of-type(2) {
+                gap: 0.6rem;
+              }
             }
 
             h4,
@@ -162,11 +170,8 @@
             }
 
             p {
-              margin-left: 1.8rem;
-            }
-
-            .address {
               width: 100%;
+              padding-left: 1.8rem;
             }
           }
         }
@@ -246,7 +251,7 @@
             }
 
             p {
-              font-weight: 500;
+              font-weight: 700;
               width: 50%;
               align-self: left;
               padding: 0;
